--- a/static/base.html
+++ b/static/base.html
@@ -41,6 +41,7 @@
           <p class="navbar-text">Привіт, {{ user.username}}!</p>
           <li><a href="{% url 'logout' %}">Вийти</a></li>
           {% else %}
+          <li><a href="{% url 'register' %}">Реєстрація</a></li>
           <li><a href="{% url 'login' %}">Login</a></li>
           {% endif %}
         </ul>
