--- a/static/base.html
+++ b/static/base.html
@@ -4,10 +4,38 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{% block title%}{% endblock %} - Task247</title>
-	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
-  <script src="{% static 'js/jquery-1.12.0.min.js' %}"></script>
-  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+	<script
+  src="https://code.jquery.com/jquery-1.12.4.min.js"
+  integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+  crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<style media="screen">
+	section.container {
+		width: 80%;
+		margin-right: auto;
+		margin-left: auto;
+	}
+	/* Sticky footer styles
+	-------------------------------------------------- */
+	html {
+		position: relative;
+		min-height: 100%;
+	}
+	body {
+		/* Margin bottom by footer height */
+		margin-bottom: 60px;
+	}
+	.footer {
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+		/* Set the fixed height of the footer here */
+		height: 60px;
+		background-color: #f5f5f5;
+	}
+	</style>
   {% block extra_head %}{% endblock %}
 </head>
 <body>
